--- a/014_FileUploading/package.json
+++ b/014_FileUploading/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "013_restapi",
+  "name": "014_fileuploading",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,9 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0"
+    "multer": "^1.4.5-lts.1"
   }
 }
