--- a/000_Project/package.json
+++ b/000_Project/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "nodemailer": "^6.9.8",
+    "path": "^0.12.7",
+    "razorpay": "^2.9.2"
   }
 }
